# onedigit

./: .editorconfig  .gitignore  README.md  calculate.py  combo_solver.py  onedigit  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/onedigit/: __init__.py  cli.py  info.py  logger.py  main.py  model.py  simple.py
tests/: test_answers.py  test_combo.py  test_model.py
tests/inputs/: simple_model_2.json  simple_model_3.json
