[project]
name = "onedigit"
dynamic = ["version"]
description = "Onedigit arithmetic puzzle"
authors = [
    {name = "Juan Rubio", email = "jcrubio@gmail.com"},
]
keywords = [
    "puzzle",
]
dependencies = [
    "fire>=0.7.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.version]
source = "file"
path = "src/onedigit/info.py"

[tool.ruff]
line-length = 120

[dependency-groups]
lint = [
    "ruff>=0.8.4",
]
