[project]
name = "onedigit"
dynamic = ["version"]
description = "Onedigit arithmetic puzzle"
authors = [
    {name = "Juan Rubio", email = "jcrubio@gmail.com"},
]
keywords = [
    "arithmetic-game",
    "math",
    "puzzle",
]
dependencies = [
    "fire>=0.7.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.coverage.run]

[tool.coverage.report]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pdm]

[tool.pdm.version]
source = "file"
path = "src/onedigit/info.py"


[tool.ruff]
line-length = 120

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[dependency-groups]
lint = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]
test = [
    "hypothesis[cli]>=6.123.15",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
